tests/ui/autoref-autoderef/deref-ambiguity-becomes-nonambiguous.stderr
error[E0283]: type annotations needed
  --> $DIR/deref-ambiguity-becomes-nonambiguous.rs:38:9
   |
LL |     let _ = var_fn.clone();
   |         ^   ------ ----- required by a bound introduced by this call
   |             |
   |             type must be known at this point
   |
   = note: cannot satisfy `_: Clone`
help: consider giving this pattern a type
   |
LL |     let _: /* Type */ = var_fn.clone();
   |          ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
